feat: api - role management
