# app/Http/Requests/Role/ApiUpdateRequest.php
@@ -1,0 +1,42 @@
+<?php
+
+namespace App\Http\Requests\Role;
+
+use App\Http\Requests\APIRequest;
+
+class ApiUpdateRequest extends APIRequest
+{
+    use RuleTrait;
+
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Prepare the data for validation.
+     */
+    protected function prepareForValidation()
+    {
+        $this->merge([
+            'id' => $this->route('id')
+        ]);
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'id' => $this->getIdCannotChagedOrDeletedRules(),
+            'name' => $this->getNameUpdateRules($this->id),
+            'permission_ids' => $this->getPermissionIdsRules()
+        ];
+    }
+}
