# app/Models/Role.php
@@ -4,6 +4,36 @@ namespace App\Models;
 
 use Spatie\Permission\Models\Role as SpatieRole;
 
+/**
+ * @OA\Schema(
+ *     schema="CreateRole",
+ *     @OA\Property(
+ *          property="name",
+ *          type="string",
+ *          example="New Role Name"
+ *     ),
+ *     @OA\Property(
+ *          property="permission_ids",
+ *          type="integer",
+ *          example={1,2}
+ *     ),
+ * )
+ *
+ * @OA\Schema(
+ *     schema="UpdateRole",
+ *     @OA\Property(
+ *          property="name",
+ *          type="string",
+ *          example="New Role Update"
+ *     ),
+ *     @OA\Property(
+ *          property="permission_ids",
+ *          type="integer",
+ *          example={1,2}
+ *     ),
+ * )
+ */
+
 class Role extends SpatieRole
 {
     public const ADMINSTRATOR = 1;
